

-------------------------------------------------------------------------------
2013.04.01 - v1.1
 - Tests on 1.8RC4 preliminary
 - Correct width of labels
 - Assign all controls to the dialog, according to
   http://pixinsight.com/forum/index.php?topic=5252.msg36173#msg36173
 - Added control files to follow PI conventions
 - Log and recover i ncase of error of formatting
 - Force Matd.round to produce integer for Format
 - Added wait cursor for long file operations
 - Made some window smaller to better behavior in small screen and Linux

-------------------------------------------------------------------------------
2013.02.06 - v1.0
 - Bug corrections on selection,
 - Made minimum dialog size smaller (hopefully support screens down to approx 1200 x 760)
 - Added shopw/hide fullPath on inputTreeBox
 - Added exit button and confirmation for remove all

-------------------------------------------------------------------------------
2012.12.28 - v0.9
 - Very large rewrite of configuration mecanism

-------------------------------------------------------------------------------
2012.11.19 - v0.8 - Refactor, bug corrections, more configurability
 - Refactored FITS keyword loading (separate js file), parameters (separate file) and quite some code
 - Correcting error of selection of file in FITSKeyword window
 - Corrected error of list entry reported by Vicent
 - Document &kw:present?absent;
 - Show alternate FITS keyword in 'Remapping' section
 - Allow selection of visibility of synthetic variable in inputFile table
 - Accept FITS keywords as variables, clean FITS kewyword value to make clean file names
 - Removed the &object; variable as this can now be done with &OBJECT;
 - Added predefiend named configuration to select kewyword mappign and conversions,
 - two configurations predefined (DEFAULT and CAHA)
 - Reworked conversion rules for filters and types, support back references in right hand side.
 - Enhance unquoting of string (respect FITS standard)