@@ -7,7 +7,7 @@
 
 #include <pjsr/DataType.jsh>
 
-#define VERSION "1.0"
+#define VERSION "1.1"
 #define ROOT_FILE_NAME "FITSFileManager.js"
 #define ROOT_FILE_DIR "../../main/js"
 #define TARGET_FILE_DIR "../../../releases"
