@@ -10,10 +10,12 @@ FITSFileManager Script Changelog
  - Assign all controls to the dialog, according to
    http://pixinsight.com/forum/index.php?topic=5252.msg36173#msg36173
  - Added control files to follow PI conventions
- - Log and recover i ncase of error of formatting
- - Force Matd.round to produce integer for Format
+ - Log and recover in case of error of formatting
+ - Force Math.round to produce integer for Format
  - Added wait cursor for long file operations
  - Made some window smaller to better behavior in small screen and Linux
+ - Reworked the check of modified order of input treebox (is not only in the GUI part)
+ - Corrected behavior of selection in output box in case of non checked targets
 
 -------------------------------------------------------------------------------
 2013.02.06 - v1.0
